--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Page Title</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="">
+<style>
+</style>
+<script src=""></script>
+<body>
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 25.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -23,3 +33,5 @@
 <path style="fill:#037854;" d="M58.02,63.76c-0.23-0.95-0.78-2.31-2.03-3.44c-2.06-1.86-4.59-1.78-5.33-1.72l-0.2-2.17
 	c0.96-0.09,4.28-0.19,6.99,2.27c1.66,1.5,2.38,3.29,2.69,4.53L58.02,63.76z"/>
 </svg>
+</body>
+</html>
