--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 25.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-	<div style="height:90vh">
+	<div style="height:90vh;margin: auto">
 		<svg style="height:90vh" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			 viewBox="0 0 119.27 116.61" style="enable-background:new 0 0 119.27 116.61;" xml:space="preserve">
 		<path style="fill:#693C2B;" d="M85.49,88.65c-0.57-0.09-1.13-0.17-1.7-0.26c-7.72-1.09-16.12-1.64-24.73-1.64
