--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 25.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-	<div style="height:100vh;widht:100vw">
-		<svg style="height:95vh;margin: auto" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	<div style="height:100vh;">
+		<svg style="height:95vh;widht:auto;position: absolute;left: 50%;top: 50%;transform: translate(-50%, -50%);padding: 10px;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			 viewBox="0 0 119.27 116.61" style="enable-background:new 0 0 119.27 116.61;" xml:space="preserve">
 		<path style="fill:#693C2B;" d="M85.49,88.65c-0.57-0.09-1.13-0.17-1.7-0.26c-7.72-1.09-16.12-1.64-24.73-1.64
 			c-2.09,0-4.17,0.04-6.21,0.09C45.8,87.06,39,87.69,32.65,88.67c0.57-0.85,1.16-1.66,1.79-2.44c5.8-7.17,14.68-11.78,24.64-11.78
